client/src/App.css
@font-face {
  font-family: digitalFont;
  src: url(digital.ttf)
}


*{
  margin-left: auto;
  margin-right: auto;
  text-align: center;
  
  color: #ffffff;
  font-family: digitalFont;
  user-select: none;
  -moz-user-select: none;
}

body{
  background: #110011;
  font-size: 20px;
}

.flex-container{
  display: flex;
}

/* game room styling */

#canvas-a{
  cursor: none;
  touch-action: none;
  width: 100%;
  height: 100%;
}
#canvas-holder{
  max-width: 100%;
  max-height: 70vh;
  aspect-ratio: 16 / 9;
}
.score{
  font-size: 30px;

  margin-top: 20px;

  margin-bottom: 20px;
}

@media only screen and (min-width: 700px){
  .score{
    font-size: 80px;
  
    margin-top: 40px;
  
    margin-bottom: 40px;
  }
}

#blue-score{
  color: #0000ff

}

#red-score{
  color: #ff0000
}



/* lobby styling */

h1{
  font-size: 100px;

  margin-top: 30px;

  margin-bottom: 30px;

  color: #ccddff;
}

.button{
  border-width: 2px;
  cursor: pointer;

  padding: 5px;

  border-style: solid;
}

#user{
  width: 40%;

  border-width: 2px;
  border-color: #999999;

  border-style: solid;

  height: 300px;
}

#room-list{
  width: 40%;

  overflow-y: scroll;

  height: 600px;

  scrollbar-color: #ffffff55 #000000;
}

#lobby-container{
  justify-content: space-around;
}

#create-room{
  height: 150px;

  justify-content: space-around;

  
  border-width: 2px;
  border-color: #ffaa00;
  position: relative;


  border-style: solid;

  align-items: center;
  padding-bottom: 50px;
}
@media only screen and (min-width: 1550px){
  #create-room{
    padding-left: 100px;
    padding-right: 100px;
  }
}

.p-button{
  color: #ffaa0077;
  border-color: #ffaa0077;
  padding: 5px 10px 5px 10px;

}

@media only screen and (min-width: 730px){
  .p-button{
    padding: 10px 20px 10px 20px;
  }
}

.selected{
  color: #ffaa00;
  border-color: #ffaa00;
  cursor: auto;
}

.create-button{
  color: #1166ff;
  border-color: #0022dd;
  position: absolute;
  bottom: 10px;
  right: 10px;

  margin: 0px;
}

.room{
  justify-content: space-around;

  flex-wrap: wrap;

  position: relative;

  border-color: #0022dd;

  margin: 5px;

  padding: 40px 10px 50px;

  border-style: solid;

  align-items: center;

  font-size: 12px;
}


@media only screen and (min-width: 1000px){
  .room{
    font-size: inherit;
  }
}

.room-name{
  position: absolute;
  top: 10px;
  left: 10px;

  margin: 0px;
}

.num-players{
  position: absolute;
  top: 10px;
  right: 10px;

  margin: 0px;
}

.player-icon{
  border-width: 2px;
  
  padding: 5px;

  width: 80%;

  border-style: solid;

  margin: 5px;

  overflow: hidden;
}

@media only screen and (min-width: 1000px){
  .player-icon{
    width: 40%;
  }
}

.green{
  border-color: #00cc00;

  color: #00cc00;
}

.red{
  border-color: #cc0000;

  color: #cc0000;
}

.join-button{
  color: #ffaa00;
  border-color: #ffaa00;
  position: absolute;
  bottom: 10px;
  right: 10px;
}

.ready-button{
  color: #00cc00;
  border-color: #00cc00;
  position: absolute;
  bottom: 10px;
  right: 10px;
}

.unready-button{
  color: #cc0000;
  border-color: #cc0000;
  position: absolute;
  bottom: 10px;
  right: 10px;
}

.leave-button{
  color: #cc0000;
  border-color: #cc0000;
  position: absolute;
  bottom: 10px;
  left: 10px;
}

#nameContainer{
  height: 70px;

  position: relative;

  width: 1200px;

  margin-bottom: 10px;
}

.playerName{
  position: absolute;

  font-size: 30px;

  margin: 0;
}

#player1{
  left: 0;
  top: 0;
}

#player2{
  right: 0;
  top: 0;
}

#player3{
  left: 0;
  bottom: 0;
}

#player4{
  right: 0;
  bottom: 0;
}

#nameInput{
  background: none;

  border-width: 2px;
  border-color: #ffffff;

  border-style: solid;

  margin-top: 60px;

  margin-left: 5px;

  margin-bottom: 70px;

  width: 80%;

  user-select: text;
  -moz-user-select: text;
}

@media only screen and (min-width: 730px){
  #nameInput{
    width: 200px;
  }
  
}

.slider {
  -webkit-appearance: none;  /* Override default CSS styles */
  appearance: none;
  width: 80%; /* Full-width */
  height: 5px; /* Specified height */
  background-image: url(hue-scale.png);

  background-size: cover;
  outline: none; /* Remove outline */
  opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
  -webkit-transition: .2s; /* 0.2 seconds transition on hover */
  transition: opacity .2s;
}


/* Mouse-over effects */
.slider:hover {
  opacity: 1; /* Fully shown on mouse-over */
}

.slider::-webkit-slider-thumb {
  -webkit-appearance: none; /* Override default look */
  -moz-appearance: none;
  appearance: none;
  width: 24px; /* Set a specific slider handle width */
  height: 24px; /* Slider handle height */
  background: #ffffffaa;
  cursor: pointer; /* Cursor on hover */

  border-radius: 12px;

  border: none;
}


.slider::-moz-range-thumb {

  -moz-appearance: none;
  width: 24px; /* Set a specific slider handle width */
  height: 24px; /* Slider handle height */
  background: #ffffffaa;
  cursor: pointer; /* Cursor on hover */

  border-radius: 12px;

  border: none;
}

